repo/components/jenkins/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/part-of: rhtas-demo
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
