repo/components/jenkins/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
    app.kubernetes.io/name: jenkins
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  host: jenkins.__CLUSTER_DOMAIN__
  to:
    kind: Service
    name: jenkins
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
